----- cvs ci ------
Sun Mar 18 21:54:57 NOVT 2001
max:
* fixed fconf2golded: set "0" group if not exist

----- cvs ci ------
Fri Mar 16 13:18:46 NOVT 2001
max:
* fixed segfault of fconf2golded on areas with no area group

----- cvs ci ------
Tue Mar 13 00:07:22 NOVT 2001
max:
* fixed segfault when parsing unknown echoarea link

----- cvs ci ------
Sun Mar 11 15:31:48 NOVT 2001
max:
* minDiskFreeSpace token for hpt

----- cvs ci ------
Sat Mar 10 23:09:47 MEZ 2001
tobi:
* Rewrote the parser core function parseLine. Replaced the endless
  if/elseif chain with a bsearch lookup and a consecutive switch/case
  construct. This should give a performance gain both in terms of
  compile time as well as in terms of run time.
  The comments in the new file tokens.h describe how to add new
  keywords to fidoconfig now.

----- cvs ci ------
Sat Mar 10 16:28:13 NOVT 2001
max:
* fixed arealinks masks: now *:*/* is possible

----- cvs ci ------
Fri Mar  9 14:11:02 NOVT 2001
max:
* new string2addr()
* routeMail, route, routeFile is "the same"

----- cvs ci ------
Mon Mar  5 22:51:20 NOVT 2001
max (patch from Alex Bronin):
* dirlayer.c: d_size for MSVC

----- cvs ci ------
Sun Mar  4 12:05:20 NOVT 2001
max:
* fix "0" groups (to NULL)
* add to doc: set, if, if not, else, elseif, ifdef, ifndef, endif,
  what is [module], etc...

----- cvs ci ------
Sun Feb 25 19:41:44 NOVT 2001
max:
* FRequestFromUpLink changed to denyFwdReqAccess !!!
* new token for hpt denyUncondFwdReqAccess

----- cvs ci ------
Sun Feb 18 14:36:51 NOVT 2001
max:
* keepTrsFiles token for hpt
* [link]BundleNameStyle Amiga

----- cvs ci ------
Sat Feb 17 23:51:48 NOVT 2001
max (patch from Serguei Revtov):
* exit on unrecognized line in config
* unifying of error messages printing in line.c

----- cvs ci ------
Tue Feb 13 22:38:28 NOVT 2001
max:
* doc updates
* change default path to config (rtfm)

----- cvs ci ------
Mon Feb 12 23:51:23 MSK 2001
Nestyurkin Nikolay:
* fix esc. sequent

----- cvs ci ------